# pika-proxy

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: codecov.yml  grcov.yml
.github/workflows/: check.yaml  ci.yml  test.yaml
config/: proxy.toml
pika-proxy/: Cargo.toml
pika-proxy/src/: main.rs
pika-proxy/src/error/: config.rs  mod.rs  network.rs
pika-proxy/src/models/: command.rs  connection_info.rs  mod.rs  request.rs  response.rs  slots.rs
pika-proxy/src/proxy/: config.rs  forward.rs  mod.rs  proxy.rs  router.rs
pika-proxy/src/proxy/backend/: mod.rs
pika-proxy/src/proxy/backend/connection_pool/: db_connection.rs  mod.rs
pika-proxy/src/proxy/dashboard/: mod.rs  proxy_api.rs
pika-proxy/src/proxy/registry/: mod.rs  registry_adapter.rs
pika-proxy/src/proxy/router/: mod.rs
pika-proxy/src/proxy/server/: mod.rs  proxy_metrics.rs
pika-proxy/src/proxy/session/: client_session.rs  mod.rs
pika-proxy/src/utils/: defer.rs
redis/: Cargo.toml
redis-utils/: Cargo.toml
redis-utils/src/: lib.rs
redis-utils/src/command/: mod.rs
redis-utils/src/error/: mod.rs
redis/src/: conn.rs  lib.rs  server.rs
redis/src/error/: mod.rs  redis.rs
src/: main.rs
src/error/: server.rs
src/models/: mod.rs  proxy.rs  slots.rs  store.rs
src/proxy/: backend.rs  config.rs  delay.rs  jodis.rs  mapper.rs  metrics.rs  mod.rs  proxy.rs  proxy_api.rs  request.rs  router.rs  session.rs  slot.rs  stats.rs
src/proxy/redis/: conn.rs  mod.rs  resp.rs
src/utils/: defer.rs  error.rs  mod.rs  redis.rs
