[package]
name = "pika-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = "=1.28.2"
slog = "2.7.0"
etcd-client = "0.10.2"
thiserror = "1.0"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }