[package]
name = "pika-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio =  { version = "1.28", features = ["full"] }
etcd-client = "0.10.2"
thiserror = "1.0"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.4"
fast_config = {version =  "1.1.3", features = ["toml"]}
project-root = "0.2.2"
clap = { version = "4.3.5", features = ["derive"] }
crossbeam-channel = "0.5.8"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

