[package]
name = "pika-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
etcd-client = "0.10.2"
axum = "0.6.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.4"
fast_config = { version = "1.1.3", features = ["toml"] }
project-root = "0.2.2"
clap = { version = "4.3.5", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
async-trait = "0.1.71"
dashmap = "5.1.0"
tokio-util = "0.7.0"
num_cpus = "1.13.1"
redis-utils = { path = "../redis-utils" }