[package]
name = "redis-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
tokio-test.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
redis = "0.23.0"
mockall = "0.11.4"
async-recursion = "1.0.4"